--- a/app/src/main/res/menu/mymenu.xml
+++ b/app/src/main/res/menu/mymenu.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/menuItemSaveToFile"
+        android:title="@string/saveMenuItemText"
+        android:icon="@drawable/ic_save"
+        android:showAsAction="ifRoom"
+        >
+    </item>
     <item android:id="@+id/menuItemAboutMe"
         android:title="@string/aboutMeMenuItemText"
-        >
-
-    </item>
+        ></item>
 </menu>
